tests/baselines/reference/for-of8.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of8.ts(2,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of8.ts (1 errors) ====
    v;
    for (var v of [0]) { }
                  ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.